[package]
name = "liutongshuo_decoding_macros_impl"
version = "0.0.2"
authors = ["LiuTongshuo <lqyhk1234@sina.com>"]

description = "Still in development"
documentation = "https://github.com/liutongshuo/liutongshuo_decoding_macros_impl"
homepage = "https://github.com/liutongshuo/liutongshuo_decoding_macros_impl"
repository = "https://github.com/liutongshuo/liutongshuo_decoding_macros_impl"
readme = "README.md"

keywords = ["decode", "macros"]

license = "MIT"

[dependencies]
proc-macro-hack = "0.4"

[lib]
proc-macro = true
